[tool.poetry]
name = "aflpp-server"
version = "0.1.0"
description = ""
authors = ["PrVrSs <resh.sersh@gmail.com>"]
readme = "README.md"
packages = [{include = "aflpp_server"}]

[tool.poetry.dependencies]
python = "^3.11"

uvloop = "^0.17.0"
dynaconf = "^3.2.1"
loguru = "^0.7.0"
watchdog = "^3.0.0"
grpcio = "^1.57.0"
grpcio-tools = "^1.57.0"
aiosqlite = "^0.19.0"
janus = "^1.0.0"
aiofiles = "^23.2.1"
grpcio-health-checking = "^1.57.0"
attrs = "^23.1.0"
sqlalchemy = "^2.0.20"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"
pytest = "^7.4.0"
isort = "^5.12.0"
mypy-protobuf = "^3.5.0"
pytest-cov = "^4.1.0"
grpcio-testing = "^1.57.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
